Fix sequence_number race in ChatMemoryService.appendMessage